--- a/src/components/GridContainer/Grid/Grid.module.css
+++ b/src/components/GridContainer/Grid/Grid.module.css
@@ -1,4 +1,5 @@
 .Grid {
+    position: absolute;
     width: 45px;
     display: flex;
     flex-flow: column;
@@ -9,7 +10,7 @@
     font-weight: 600;
     box-sizing: border-box;
     background-color: rgb(173, 216, 230);
-    transition: height 0.3s linear, left 0.3s linear;
+    transition: height 0.5s linear, left 0.1s ease-in-out;
 }
 .Grid:not(:last-child) {
     margin-right: 5px;
