--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -2,12 +2,11 @@
     margin: 0;
     padding: 0;
     width: 100vw;
-    max-width: 100%;
     height: 100vh;
     overflow: hidden;
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 6% auto 6%;
+    grid-template-columns: 6rem auto;
+    grid-template-rows: 6rem auto 6rem;
     font-family: 'Open Sans', sans-serif;
 }
 .Header, .Footer {
@@ -17,12 +16,24 @@
     flex-flow: row;
     align-items: center;
     justify-content: flex-start;
-    font-size: 1em;
+    font-size: 1.4rem;
     background: #100e17;
     border-bottom: 1px solid #201c29;
     color: white;
 }
+.Header {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 1;
+}
+.Footer {
+    grid-column: 1 / span 2;
+    grid-row: 3 / span 1;
+}
 .Header__title {
     flex-basis: 20%;
     font-weight: bold;
+}
+.Sidebar {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
 }
