--- a/src/UI/Sidebar/Sidebar.module.css
+++ b/src/UI/Sidebar/Sidebar.module.css
@@ -1,4 +1,5 @@
 .SidebarControl {
+    position: relative;
     width: 100%;
     height: 100%;
     background: #100e17;
@@ -6,4 +7,16 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+}
+
+.SidebarControl__el {
+    position: absolute;
+    cursor: pointer;
+    bottom: 1rem;
+    width: 100%;
+    height: 7rem;
+    background-color: rgb(255, 138, 39);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
