Implement following changes - 1. Create a new Sidebar action component. 2. Create a common css file to hold frequent used css. 3. Modify folder structure a bit.

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --menu-color: rgb(255, 138, 39);
+  --white-color: #ffffff;
+  --black-color: #000000;
+}
