--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -12,11 +12,15 @@
 .SidebarControl__el {
     position: absolute;
     cursor: pointer;
-    bottom: 1rem;
+    bottom: 6rem;
     width: 100%;
     height: 7rem;
-    background-color: rgb(255, 138, 39);
+    background-color: var(--menu-color);
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.SidebarControl__el > svg {
+    transition: transform 0.5s;
 }
